--- a/ui/css/base/tables.scss
+++ b/ui/css/base/tables.scss
@@ -1,5 +1,4 @@
 table {
-  border-collapse: collapse;
   background: var(--color-background-aside, $color-background-aside);
 }
 
