--- a/ui/css/variables.scss
+++ b/ui/css/variables.scss
@@ -6,10 +6,6 @@ $padding: 1rem;
 $color-title: rgb(255, 255, 255);
 $color-theme: rgb(204, 91, 24);
 
-$font-family:
-  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
 // Non-themable colors and properties
 // The colors will be set depending on the dark mode setting.
 
